Disable invisible scroll fix for debug purposes. Fixed submenu scrolls

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,8 +1,8 @@
 /* MATERIAL */
-::-webkit-scrollbar { 
+/*::-webkit-scrollbar { 
     display: block !important; 
 	width: 0px; 
-}
+}*/
 .button-active {
 	background: rgb(207,216,220) !important;
 	color: rgba(0,0,0,0.87)!important;
